Remove mockup on mobile + fix broken terms  link

--- a/public/assets/css/custom.css
+++ b/public/assets/css/custom.css
@@ -101,15 +101,14 @@ html {
     font-size: 14px;
 }
 
-.soon .overlay {
-    display: flex;
-    align-items: center;
-    justify-content: cente;
+.soon::before {
+    content: close-quote;
+    display: block;
     position: absolute;
     z-index: 100;
     width: 100%;
     height: 100%;
-    background-color: #8883;
+    background-color: #0008;
 }
 
 .page p {
